Added new user components + util functions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./client/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./client/react-table.css">
+		
     <title>Library Management System</title>
 </head>
 
