Added change password functionality

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <title>Library Management System</title>
 </head>
 
-<body>
+<body background="./client/stripes-light.png">
 		<div id="root"></div>
 		<script src='./client/build/app.js'></script>
-
 </body>
 
 </html>
