--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="./client/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="./client/react-table.css">
+		<link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./node_modules/react-table/react-table.css">
 		
     <title>Library Management System</title>
 </head>
 
-<body background="./client/stripes-light.png">
+<body background="./client/utils/stripes-light.png">
 		<div id="root"></div>
 		<script src='./client/build/app.js'></script>
 </body>
